<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- == PROJECT COORDINATES ============================================= -->

    <groupId>nestml</groupId>
    <artifactId>nestml-core</artifactId>
    <version>0.0.4-SNAPSHOT</version>

    <properties>

        <!-- .. Libraries ..................................................... -->
        <guava.version>18.0</guava.version>
        <commons.cli.version>1.3.1</commons.cli.version>
        <junit.version>4.12</junit.version>

        <!-- Monticore versions and dependencies -->
        <antlr.version>4.5</antlr.version>
        <monticore.version>4.4.0</monticore.version>

        <!-- .. Plugins ....................................................... -->
        <compiler.plugin>3.5.1</compiler.plugin>
        <release.plugin>2.5.1</release.plugin>
        <source.plugin>3.0.0</source.plugin>
        <maven.assembly.version>2.6</maven.assembly.version>

        <!-- Classifiers -->
        <grammars.classifier>grammars</grammars.classifier>
        <symbols.classifier>symbols</symbols.classifier>
        <models.classifier>models</models.classifier>

        <!-- .. Misc .......................................................... -->
        <java.version>1.8</java.version>
        <wagon.provider.version>2.6</wagon.provider.version>
        <logback.version>1.1.2</logback.version>
        <groovy.version>2.3.7</groovy.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- == PROJECT METAINFORMATION ========================================= -->

    <name>nestml-core</name>
    <url>http://lab11.se.rwth-aachen.de/nexus/service/local/repositories/se-sites/content/monticore/${project.version}/</url>
    <inceptionYear>2013</inceptionYear>

    <organization>
        <name>Department of Software Engineering, RWTH Aachen University</name>
        <url>http://www.se-rwth.de/</url>
    </organization>

    <mailingLists>
        <mailingList>
            <name>Developer</name>
            <post>monticore-dev@se-rwth.de</post>
        </mailingList>
    </mailingLists>

    <issueManagement>
        <system>Trac</system>
        <url>https://sselab.de/lab2/private/trac/MontiCore/</url>
    </issueManagement>

    <!-- == DEFAULT BUILD SETTINGS =========================================== -->

    <!-- == DEFAULT BUILD SETTINGS =========================================== -->

    <build>

        <plugins>
            <!-- MontiCore Configuration -->

            <!-- MontiCore Generation -->
            <plugin>
                <groupId>de.monticore.mojo</groupId>
                <artifactId>monticore-maven-plugin</artifactId>
                <version>${monticore.version}</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Other Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${release.plugin}</version>
                <configuration>
                    <tagNameFormat>monticore-@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source.plugin}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Create jar with all dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>

                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.assembly.version}</version>
                <configuration>
                    <finalName>nestml</finalName>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <appendAssemblyId>false</appendAssemblyId>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.nest.frontend.NESTMLFrontend</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>

    <dependencies>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commons.cli.version}</version>
        </dependency>


        <!-- MontiCore Dependencies -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-runtime</artifactId>
            <version>${monticore.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-grammar</artifactId>
            <version>${monticore.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-grammar</artifactId>
            <version>${monticore.version}</version>
            <classifier>${grammars.classifier}</classifier>
        </dependency>

        <!-- .. Test Libraries ............................................... -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>de.monticore</groupId>
            <artifactId>monticore-runtime</artifactId>
            <version>${monticore.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy</artifactId>
            <version>${groovy.version}</version>
        </dependency>

    </dependencies>

</project>
